[package]
name = "imageConverter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
image = "0.24.7"
wasm-bindgen = "0.2.88"

[dependencies.web-sys]
version = "0.3.65"
features = [
  'console'  
]
